style: estilizar NavMenu, Nav e Search

--- a/book-app/src/components/Search.module.css
+++ b/book-app/src/components/Search.module.css
@@ -1,7 +1,11 @@
-.search-input{
-    width: 50%;
-    height: 2em;
-    margin: 2em;
+.container {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
+    width: 100%;
+}
+  
+.search-input {
+    width: 85%;
+    display: flex;
+    justify-content: space-around; 
 }
